unpackaged/main/default/objects/pse__Timecard_Transmission__c/fields/pse__Batch_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Limit__c</fullName>
    <description>Maximum number of resources we can send timecards for in a single response.</description>
    <inlineHelpText>Maximum number of resources we can send timecards for in a single response.</inlineHelpText>
    <label>Batch Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>