unpackaged/main/default/objects/pse__Timecard_Transmission__c/fields/pse__EndDate__c.field-meta.xml
<CustomField>
    <fullName>pse__EndDate__c</fullName>
    <description>The end date contained in the POST request.</description>
    <inlineHelpText>The end date contained in the POST request.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>