unpackaged/main/default/objects/pse__Timecard_Transmission__c/fields/pse__Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>pse__Records_Processed__c</fullName>
    <description>Number of resource transmissions processed with a status of Complete.</description>
    <inlineHelpText>Number of resource transmissions processed with a status of Complete.</inlineHelpText>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>