unpackaged/main/default/objects/pse__Timecard_Transmission__c/fields/pse__StartDate__c.field-meta.xml
<CustomField>
    <fullName>pse__StartDate__c</fullName>
    <description>The start date contained in the POST request.</description>
    <inlineHelpText>The start date contained in the POST request.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>